[package]
name = "srsadmm-core"
description = "Core library for the srsadmm project, used to solve consensus ADMM problems with serverless compute."
version = "0.1.6"
edition = "2024"
license = "MIT"
authors = ["Nick Bukovec <bukovec@stanford.edu>"]
repository = "https://github.com/buk0vec/srsadmm"

[features]
default = []
linfa = ["dep:linfa", "dep:linfa-elasticnet"]
accelerate = ["nalgebra-lapack/accelerate"]
openblas = ["nalgebra-lapack/openblas"]
netlib = ["nalgebra-lapack/netlib"]
rayon = ["dep:rayon"]

[dependencies]
futures = "0.3.31"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
rand = "0.9.1"
rand_distr = "0.5.1"
tokio = { version = "1.45.0", features = ["full"] }
aws-config = { version= "1.6.2", features = ["behavior-version-latest"] }
serde = "1.0.219"
bincode = { version = "2.0.1", features = ["serde"] }
aws-sdk-s3 = "1.85.0"
aws-smithy-types = "1.3.1"
serde_json = "1.0.140"
aws-sdk-lambda = {version = "1.78.0", features = ["rt-tokio"]}
linfa = { version = "0.7.1", optional = true }
linfa-elasticnet = { version = "0.7.1", optional = true }
ndarray = "0.15.6"
async-trait = "0.1.88"
rayon = { version = "1.10.0", optional = true }
memmap2 = "0.9.5"
clap = { version = "4.5.39", features = ["derive"] }
async-compression = { version = "0.4.23", features = ["tokio", "zstd"] }

[dependencies.nalgebra-lapack]
version = "0.25.0" 
default-features = false
optional = true

[[bin]]
name = "generate_problem"
path = "src/bin/generate_problem.rs"

[[bin]]
name = "lasso"
path = "src/bin/lasso.rs"

[[bin]]
name = "lasso_prox"
path = "src/bin/lasso_prox.rs"
