[package]
name = "srsadmm-lambda-mm"
version = "0.1.2"
edition = "2021"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.85.0", features = ["rt-tokio"] }
lambda_runtime = "0.13.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
serde = "1"
tokio = { version = "1", features = ["macros"] }
thiserror = "2.0.12"
aws-sdk-lambda = "1.78.0"
async-compression = { version = "0.4.23", features = ["tokio", "zstd"] }
