[package]
name = "srsadmm-lasso-factor"
version = "0.1.0"
edition = "2021"

[dependencies]

lambda_runtime = "0.13.0"
serde = "1"
tokio = { version = "1", features = ["macros"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.85.0", features = ["rt-tokio"] }
bincode = { version = "2.0.1", features = ["serde"] }
thiserror = "2.0.12"
aws-sdk-lambda = "1.78.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
async-compression = { version = "0.4.23", features = ["tokio", "zstd"] }
